--- a/stile.css
+++ b/stile.css
@@ -9,7 +9,7 @@
   margin: 4px 2px;
   cursor: pointer;
   background-color: #0000FF;
-  background-image: https://png.pngtree.com/png-clipart/20190118/ourmid/pngtree-game-button-technology-button-colorful-technology-button-source-file-start-button-png-image_462025.jpg;
+  background-image: url(https://png.pngtree.com/png-clipart/20190118/ourmid/pngtree-game-button-technology-button-colorful-technology-button-source-file-start-button-png-image_462025.jpg);
 }
 .comand{
   margin-top: 250px;
