--- a/stile.css
+++ b/stile.css
@@ -1,7 +1,8 @@
 .bott{
   border: none;
-  color: yellow;
+  color: pink;
   width: 200px;
+  height: 100px;
   padding: 15px 32px;
   text-align: center;
   display: inline-block;
