--- a/stile.css
+++ b/stile.css
@@ -2,7 +2,7 @@
   border: none;
   color: pink;
   width: 200px;
-  height: 100px;
+  height: 50px;
   padding: 15px 32px;
   text-align: center;
   display: inline-block;
@@ -11,6 +11,7 @@
   cursor: pointer;
   background-color: #0000FF;
   background-image: url(https://png.pngtree.com/png-clipart/20190118/ourmid/pngtree-game-button-technology-button-colorful-technology-button-source-file-start-button-png-image_462025.jpg);
+  background-size: 50px;
 }
 .comand{
   margin-top: 250px;
