--- a/stile.css
+++ b/stile.css
@@ -11,7 +11,7 @@
   cursor: pointer;
   background-color: #0000FF;
   background-image: url(https://png.pngtree.com/png-clipart/20190118/ourmid/pngtree-game-button-technology-button-colorful-technology-button-source-file-start-button-png-image_462025.jpg);
-  background-size: 100%;
+  background-size: 200px;
 }
 .comand{
   margin-top: 250px;
