--- a/stile.css
+++ b/stile.css
@@ -12,7 +12,7 @@
   margin: 4px 2px;
   cursor: pointer;
   background-color: #0000FF;
-  background-image: url(https://png.pngtree.com/png-clipart/20190118/ourmid/pngtree-game-button-technology-button-colorful-technology-button-source-file-start-button-png-image_462025.jpg);
+  background-image: url(https://cdn.pixabay.com/photo/2015/07/25/07/58/the-button-859345_1280.png);
   background-size: 100%;
 }
 .comand{
