--- a/stile.css
+++ b/stile.css
@@ -12,7 +12,7 @@
   margin: 4px 2px;
   cursor: pointer;
   background-color: #0000FF;
-  background-image: url(https://cdn.pixabay.com/photo/2015/07/25/07/58/the-button-859345_1280.png);
+  opacity:0.6;
   background-size: 100%;
 }
 .comand{
