--- a/stile.css
+++ b/stile.css
@@ -11,8 +11,7 @@
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-  background-color: #0000FF;
-  opacity:0.1;
+  background-color: #ffffff;
   background-size: 100%;
 }
 .comand{
