--- a/stile.css
+++ b/stile.css
@@ -1,8 +1,9 @@
 .bott{
   border: none;
-  color: red;
-  font-family: Calibri;
-  font-size: 20px;
+  color: black;
+  font-weight: bold;
+  font-family: Sigmar;
+  font-size: 200px;
   width: 500px;
   height: 40px;
   padding: 15px 32px;
@@ -10,8 +11,7 @@
   display: inline-block;
   margin: 4px 2px;
   cursor: pointer;
-  background-image:url(https://see.fontimg.com/api/renderfont4/vmVwZ/eyJyIjoiZnMiLCJoIjo1NCwidyI6MTAwMCwiZnMiOjU0LCJmZ2MiOiIjMDAwMDAwIiwiYmdjIjoiI0ZGRkZGRiIsInQiOjF9/Q2FjY2lhIGFsbCB1LWJvYXQ/ro-spritendo-semibold-beta.png);
-  background-size: 100%;
+  background-color:#ffffff;
 }
 .comand{
   margin-top: 250px;
