--- a/stile.css
+++ b/stile.css
@@ -3,8 +3,8 @@
   color: black;
   font-weight: bold;
   font-family: Sigmar;
-  font-size: 200px;
-  width: 500px;
+  font-size: 50px;
+  width: 300px;
   height: 40px;
   padding: 15px 32px;
   text-align: center;
@@ -12,6 +12,11 @@
   margin: 4px 2px;
   cursor: pointer;
   background-color:#ffffff;
+}
+.tito{
+  font-weight:bold;
+  font-family:Sigmar;
+  font-size:200px;
 }
 .comand{
   margin-top: 250px;
