--- a/stile.css
+++ b/stile.css
@@ -1,22 +1,15 @@
 .bott{
-  border: none;
-  color: black;
-  font-weight: bold;
-  font-family: Sigmar;
-  font-size: 50px;
-  width: 300px;
-  height: 40px;
-  padding: 15px 32px;
-  text-align: center;
-  display: inline-block;
-  margin: 4px 2px;
-  cursor: pointer;
-  background-color:#ffffff;
+  border: solid;
+  font-family:Sigmar;
+  font-size:50px;
+  text-align:right;
+  margin-top:200px;
 }
 .tito{
   font-weight:bold;
   font-family:Sigmar;
   font-size:200px;
+  text-align: center;
 }
 .comand{
   margin-top: 250px;
