--- a/stile.css
+++ b/stile.css
@@ -3,7 +3,7 @@
   height:80px;
   border-color:transparent;
   border-radius:40px;
-  box-shadow:0px 0px 15px #388e3c;
+  box-shadow:0px 0px 15px #0000FF;
   font-size:25px;
   font-family:'Pacifico',cursive;
   color:#2e7d32;
