--- a/stile.css
+++ b/stile.css
@@ -6,7 +6,7 @@
   box-shadow:0px 0px 15px #0000FF;
   font-size:25px;
   font-family:'Pacifico',cursive;
-  color:#2e7d32;
+  color:#0000FF;
   
 }
 .tito{
