--- a/stile.css
+++ b/stile.css
@@ -1,6 +1,7 @@
 .bott{
   width:300px;
   height:80px;
+  margin-top:5px;
   border-color:transparent;
   border-radius:40px;
   box-shadow:0px 0px 15px #0000FF;
