--- a/stile.css
+++ b/stile.css
@@ -7,6 +7,7 @@
   box-shadow:0px 0px 15px #0000FF;
   font-size:25px;
   font-family:'Pacifico',cursive;
+  background-color:black;
   color:#0000FF;
   
 }
