--- a/stile.css
+++ b/stile.css
@@ -7,8 +7,8 @@
   box-shadow:0px 0px 15px #0000FF;
   font-size:25px;
   font-family:'Pacifico',cursive;
-  background-color:white;
-  color:#0000FF;
+  background-color:blue;
+  color:#FFFFFF;
   
 }
 .tito{
