--- a/stile.css
+++ b/stile.css
@@ -1,7 +1,7 @@
 .bott{
-  width:300px;
-  height:80px;
-  margin-top:20px;
+  width:15%;
+  height:25%;
+  margin-top:25px;
   border-color:transparent;
   border-radius:40px;
   box-shadow:0px 0px 15px #0000FF;
@@ -20,10 +20,20 @@
 .comand{
   margin-top: 250px;
   margin-right: 10px;
-  text-align: right;
+  text-align: left;
 }
 
 body {
-  background-image: url("image/fondale.png");
   width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: url(image/fondale.png) no-repeat center top;
+  position: fixed; 
+  z-index: -1;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
 }
