--- a/stile.css
+++ b/stile.css
@@ -30,6 +30,28 @@
   
 }
 
+.t2{
+  
+  width:15%;
+  height:25%;
+  
+}
+
+.t3{
+  
+  width:15%;
+  height:25%;
+  
+}
+
+.t4{
+  
+  width:15%;
+  height:25%;
+  
+}
+
+
 
 body {
   width: 100%;
