--- a/stile.css
+++ b/stile.css
@@ -23,33 +23,14 @@
 }
 
 
-.t1{
+.t{
   
   width:15%;
   height:25%;
   
 }
 
-.t2{
-  
-  width:15%;
-  height:25%;
-  
-}
 
-.t3{
-  
-  width:15%;
-  height:25%;
-  
-}
-
-.t4{
-  
-  width:15%;
-  height:25%;
-  
-}
 
 
 
