--- a/stile.css
+++ b/stile.css
@@ -23,7 +23,13 @@
 }
 
 
-.table{
+.table,th,td{
+  border:1px solid black;
+  border-collapse: collaspe;
+  padding: 10px;
+  width:100%;
+  table-layout: fixed;
+  
   
   
   
