--- a/stile.css
+++ b/stile.css
@@ -35,6 +35,20 @@
   table-layout: fixed;
   
 }
+.scherm2{
+width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: url(image/scherm.jpg) no-repeat center top;
+  position: fixed; 
+  z-index: -1;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  
+}
 
 
 
