--- a/stile.css
+++ b/stile.css
@@ -34,6 +34,20 @@
   table-layout: fixed;
   
 }
+.navi{
+  width:20;
+  height:30%;
+  margin-top:25px;
+  border-color:transparent;
+  border-radius:40px;
+  box-shadow:0px 0px 15px #0000FF;
+  font-size:25px;
+  font-family:'Pacifico',cursive;
+  background-color:blue;
+  color:#FFFFFF;
+  
+}
+
 .schermata {
   width: 100%;
   height: 100%;
