--- a/stile.css
+++ b/stile.css
@@ -35,14 +35,11 @@
   
 }
 .navi{
-  width:20;
-  height:30%;
-  margin-top:25px;
+  width:25%;
+  height:25%;
   border-color:transparent;
   border-radius:40px;
   box-shadow:0px 0px 15px #0000FF;
-  font-size:25px;
-  font-family:'Pacifico',cursive;
   background-color:blue;
   color:#FFFFFF;
   
