--- a/stile.css
+++ b/stile.css
@@ -30,7 +30,7 @@
   border:1px solid black;
   border-collapse: collapse;
   padding: 10px;
-  width:auto;
+  width:100%;
   table-layout: fixed;
   
 }
