--- a/stile.css
+++ b/stile.css
@@ -15,6 +15,8 @@
   border-color:transparent;
   border: 1px solid black;
   border-radius:40px;
+  padding: 10px;
+  table-layout: fixed;
 }
 .tito{
   font-family:Impact;
