--- a/stile.css
+++ b/stile.css
@@ -11,8 +11,7 @@
   color:#FFFFFF;
   
 }
-.tr,td{
-  align="center";
+.th,tr,td{
   border:1px solid black;
   border-collapse: collapse;
   padding: 10px;
