--- a/stile.css
+++ b/stile.css
@@ -15,6 +15,8 @@
   border:1px solid black;
   border-collapse: collapse;
   table-layout: fixed;
+  width: 100%;
+  height: 100%;
 }
 .tito{
   font-family:Impact;
