--- a/stile.css
+++ b/stile.css
@@ -15,8 +15,10 @@
   border:1px solid black;
   border-collapse: collapse;
   table-layout: fixed;
-  width: 100%;
-  height: 100%;
+}
+.tr{
+  width:25%;
+  height:25%;
 }
 .tito{
   font-family:Impact;
