--- a/stile.css
+++ b/stile.css
@@ -11,14 +11,17 @@
   color:#FFFFFF;
   
 }
-.tr,td{
+.tr{
   border:1px solid black;
   border-collapse: collapse;
   table-layout: fixed;
-}
-.tr{
   width:25%;
   height:25%;
+}
+.td{
+  border:1px solid black;
+  border-collapse: collapse;
+  table-layout: fixed;
 }
 .tito{
   font-family:Impact;
