--- a/stile.css
+++ b/stile.css
@@ -59,6 +59,20 @@
   background-size: cover;
 
 }
+.schermata_2 {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: url(image/fondale_2.png) no-repeat center top;
+  position: fixed; 
+  z-index: -1;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+}
 
 #countdown {
   background-color: #FFFFFF;
