--- a/stile.css
+++ b/stile.css
@@ -11,7 +11,7 @@
   color:#FFFFFF;
 }
 #titobarca{
-  font-family:'Roboto Mono';
+  font-family:'Pacifico';
   font-size:18px;
   text-align:center;
 }
