--- a/stile.css
+++ b/stile.css
@@ -11,13 +11,13 @@
   color:#FFFFFF;
 }
 #titobarca{
-  font-family:'Pacifico';
+  font-family:'Courier New';
   font-size:18px;
   text-align:center;
 }
 .desc{
   font-size:18px;
-  font-family:"Arial";
+  font-family:"Courier New";
   color: white;
 }
 .table{
