--- a/stile.css
+++ b/stile.css
@@ -10,6 +10,17 @@
   background-color:blue;
   color:#FFFFFF;
 }
+#table1{
+  width:100%;
+  height:95%;
+}
+#table2{
+  width:3500px;
+  height:3500px;
+  margin-left: 20%;
+  margin-top:2%;
+  border:1px solid black;
+}
 #titobarca{
   font-family:'Courier New';
   font-size:20px;
@@ -23,21 +34,10 @@
   font-family:"Courier New";
   color: white;
 }
-.table{
-  background-color: #0000FF;
-}
 .tr,td{
   border:1px solid white;
   border-collapse: collapse;
   table-layout: fixed;
-}
-.tr{
-  width:25%;
-  height:25%;
-}
-.td{
-  width:75%;
-  height:25%;
 }
 .tito{
   font-family:Impact;
@@ -50,8 +50,9 @@
   text-align: left;
 }
 .casella{
-  display:inline-block;
-  width: 25px;
+  display: block;
+  width:100%;
+  height:100%;
 }
 .schermata {
   width: 100%;
@@ -81,14 +82,14 @@
   background-size: cover;
 
 }
-
 #countdown {
   background-color: #FFFFFF;
+  float: right;
   display: inline-flex;
   align-items: right;
-  justify-content: center;
-  font-size: 50px;
+  justify-content: left;
+  font-size: 100px;
   margin: 0;
-  height: 70px;
-  width: 200px;
+  height: 5%;
+  width: 10%;
 }
