--- a/stile.css
+++ b/stile.css
@@ -12,14 +12,20 @@
 }
 #table1{
   width:100%;
+  border-collapse: collapse;
   height:95%;
 }
 #table2{
-  width:3500px;
-  height:3500px;
+  width:50%;
+  height:50%;
   margin-left: 20%;
   margin-top:2%;
   border:1px solid black;
+  border-collapse: collapse;
+}
+.campogioco{
+  border:1px solid black;
+  table-layout: fixed;
 }
 #titobarca{
   font-family:'Courier New';
@@ -34,10 +40,13 @@
   font-family:"Courier New";
   color: white;
 }
-.tr,td{
+.selez{
   border:1px solid white;
-  border-collapse: collapse;
   table-layout: fixed;
+}
+.spazim{
+  width:18%;
+  height:20%;
 }
 .tito{
   font-family:Impact;
@@ -88,8 +97,8 @@
   display: inline-flex;
   align-items: right;
   justify-content: left;
-  font-size: 100px;
+  font-size: 60px;
   margin: 0;
   height: 5%;
-  width: 10%;
+  width: 15%;
 }
