--- a/stile.css
+++ b/stile.css
@@ -40,6 +40,11 @@
   font-family:"Courier New";
   color: white;
 }
+.desc1{
+  font-size:38px;
+  font-family:"Courier New";
+  color: white;
+}
 .selez{
   border:1px solid white;
   table-layout: fixed;
