--- a/stile.css
+++ b/stile.css
@@ -49,6 +49,8 @@
 .selez{
   border:1px solid white;
   table-layout: fixed;
+  width:100%;
+  height:20%;
 }
 .spazim{
   width:13%;
@@ -138,4 +140,3 @@
   font: bold 14px "Quicksand", sans-serif;
   color: #ffffff;
 }
-
