--- a/stile.css
+++ b/stile.css
@@ -10,6 +10,14 @@
   background-color:blue;
   color:#FFFFFF;
 }
+.bott1{
+  width:100%;
+  height:100%;
+  margin-top:20%;
+  border-color:transparent;
+}
+
+
 #table1{
   width:100%;
   border-collapse: collapse;
