--- a/stile.css
+++ b/stile.css
@@ -15,6 +15,12 @@
   height:100%;
   margin-top:20%;
   border-color:transparent;
+  border-radius:40px;
+  font-size:128%;
+  text-align: center;
+  font-family:'Courier New';
+  background-color:rgb(0, 0, 0);
+  color:#FFFFFF;
 }
 
 
