--- a/stile.css
+++ b/stile.css
@@ -157,3 +157,22 @@
 
 
 h1,h2,h3,h4,h5,h6{cursor:pointer;}
+
+#container{
+  width:100%;
+  height: 170%;
+  margin-top: 2%;
+  margin-left: 6.5%;
+}
+.pricetab{
+  width:17%;
+  height: 43%;
+  background: linear-gradient(#0b4476, #074365);
+  float:left;
+  border-top: 1px solid #000000;
+  border-bottom: 1px solid #000000;
+  border-left:1px solid #000000;
+  border-right: 1px solid #000000;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
+  
+}
