--- a/stile.css
+++ b/stile.css
@@ -174,5 +174,16 @@ h1,h2,h3,h4,h5,h6{cursor:pointer;}
   border-left:1px solid #000000;
   border-right: 1px solid #000000;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 1);
-  
+}
+
+.infos{
+  width: 100%;
+  height: 40%;
+}
+
+.price{
+  width:100%;
+  height:30%;
+  margin:5% auto 0 auto;
+  text-align:center;
 }
