--- a/stile.css
+++ b/stile.css
@@ -207,3 +207,27 @@ h1{
   text-align:center;
   line-height:3;
 }
+
+h3{
+  font-size:14px;
+  text-align:center;
+  color:#fff;
+  margin-bottom: 10%;
+
+}
+
+.button{
+  width:50%;
+  height:10%;
+  margin-top: -13%;
+  margin-left: 25%;
+  text-align:center; 
+  cursor:pointer;
+  -moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  -ms-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+.button:hover{
+  width:60%;
+}
