--- a/stile.css
+++ b/stile.css
@@ -6,7 +6,7 @@
   border-radius:40px;
   box-shadow:0px 0px 15px #0000FF;
   font-size:25px;
-  font-family:'Pacifico',cursive;
+  font-family:'Courier New';
   background-color:blue;
   color:#FFFFFF;
 }
