--- a/stile.css
+++ b/stile.css
@@ -25,6 +25,12 @@
 
 .conts{
   border: solid 1px white;
+  text-align: center;
+  font-family:'Courier New';
+  font-size:130%;
+  width:100%;
+  height:100%;
+  color:#FFFFFF;
 }
 
 #table1{
