--- a/stile.css
+++ b/stile.css
@@ -37,7 +37,6 @@
   width:50%;
   height:50%;
   margin-left: 20%;
-  margin-top:2%;
   border:1px solid black;
   border-collapse: collapse;
 }
@@ -103,19 +102,12 @@
   background-size: cover;
 
 }
-.schermata_2 {
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: url(image/fondale_2.png) no-repeat center top;
-  position: fixed; 
-  z-index: -1;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
 
+.schermata_2 {
+  width: 98%;
+  height: 98%;
+  background: url(image/fondale_2.png);
+  position: fixed; 
 }
 
 .parametri {
