--- a/stile.css
+++ b/stile.css
@@ -8,6 +8,7 @@
   font-size:25px;
   font-family:'Courier New';
   background-color:blue;
+  cursor:pointer;
   color:#FFFFFF;
 }
 .bott1{
@@ -17,6 +18,7 @@
   border-color:transparent;
   border-radius:40px;
   font-size:128%;
+  cursor:pointer;
   text-align: center;
   font-family:'Courier New';
   background-color:rgb(0, 0, 0);
@@ -53,7 +55,7 @@
   color: white;
 }
 .desc{
-  font-size:18px;
+  font-size:90%;
   font-family:"Courier New";
   color: white;
 }
@@ -100,7 +102,6 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-
 }
 
 .schermata_2 {
@@ -150,16 +151,13 @@
   color: #ffffff;
 }
 
-
-h1,h2,h3,h4,h5,h6{cursor:pointer;}
-
 #container{
   width:100%;
   height: 170%;
   margin-top: 2%;
   margin-left: 6.5%;
 }
-.pricetab{
+.naveselezione{
   width:17%;
   height: 43%;
   background: linear-gradient(#0b4476, #074365);
@@ -176,14 +174,11 @@ h1,h2,h3,h4,h5,h6{cursor:pointer;}
   height: 40%;
 }
 
-.price{
+.imgselezione{
   width:100%;
   height:30%;
   margin:5% auto 0 auto;
   text-align:center;
-}
-.author:hover{
-  background:rgba(0, 0, 0, .8);
 }
 
 .title{
@@ -217,12 +212,12 @@ h3{
   margin-top: -13%;
   margin-left: 25%;
   text-align:center; 
-  cursor:pointer;
   -moz-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
+
 .button:hover{
-  width:60%;
+  width:55%;
 }
