--- a/stile.css
+++ b/stile.css
@@ -54,10 +54,13 @@
   font-weight: bold;
   color: white;
 }
+
 .desc{
   font-size:90%;
   font-family:"Courier New";
   color: white;
+  text-align:center;
+  margin-bottom: 10%;
 }
 .desc1{
   text-align: center;
@@ -154,9 +157,18 @@
 #container{
   width:100%;
   height: 170%;
-  margin-top: 2%;
   margin-left: 6.5%;
+  margin-top: 3.5%;
 }
+
+.nnavselezione{
+  font-family:'Courier New';
+  font-size:112%;
+  color:#fff;
+  text-align:center;
+  line-height:3;
+}
+
 .naveselezione{
   width:17%;
   height: 43%;
@@ -181,29 +193,26 @@
   text-align:center;
 }
 
-.title{
+.titoloselezione{
   font-family:'Courier New';
   color:#fff;
-  font-size:38px;
+  font-size:300%;
   font-weight:normal;
   text-align:center;
   text-transform:uppercase;
   text-shadow: 1px 2px 5px rgba(65, 65, 240, 0.897);
-  margin-top: 0px;
-}
-h1{
-  font-size:18px;
-  color:#fff;
-  text-align:center;
-  line-height:3;
+  margin-top: 1.5%;
 }
 
-h3{
-  font-size:14px;
+.titolo{
+  font-family:'Courier New';
+  color:#ffffff;
+  font-size:500%;
+  font-weight:bold;
   text-align:center;
-  color:#fff;
-  margin-bottom: 10%;
-
+  text-transform:uppercase;
+  text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
+  margin-top: 3%;
 }
 
 .button{
