--- a/stile.css
+++ b/stile.css
@@ -1,11 +1,11 @@
 .bott{
   width:15%;
   height:25%;
-  margin-top:25px;
+  margin-top:2%;
   border-color:transparent;
   border-radius:40px;
   box-shadow:0px 0px 15px #0000FF;
-  font-size:25px;
+  font-size: 150%;
   font-family:'Courier New';
   background-color:blue;
   cursor:pointer;
@@ -14,7 +14,7 @@
 .bott1{
   width:100%;
   height:100%;
-  margin-top:20%;
+  margin-top:50%;
   border-color:transparent;
   border-radius:40px;
   font-size:128%;
@@ -48,15 +48,17 @@
 }
 #titobarca{
   font-family:'Courier New';
-  font-size:20px;
+  font-size:125%;
   text-align:center;
-  text-transform: capitalize;
   font-weight: bold;
   color: white;
 }
 
 .desc{
-  font-size:90%;
+  font-size:100%;
+  overflow:auto;
+  width:100%;
+  height:130%;
   font-family:"Courier New";
   color: white;
   text-align:center;
@@ -64,7 +66,7 @@
 }
 .desc1{
   text-align: center;
-  font-size:38px;
+  font-size:220%;
   font-family:"Courier New";
   color: white;
 }
@@ -78,14 +80,9 @@
   width:100%;
   height:100%;
 }
-.tito{
-  font-family:'Courier New';
-  font-size:100px;
-  text-align: center;
-}
 .comand{
-  margin-top: 250px;
-  margin-right: 10px;
+  margin-top: 15%;
+  margin-right: 1%;
   text-align: left;
 }
 .casella{
@@ -108,8 +105,8 @@
 }
 
 .schermata_2 {
-  width: 98%;
-  height: 98%;
+  width: 100%;
+  height: 100%;
   background: url(image/fondale_2.png);
   position: fixed; 
 }
@@ -121,15 +118,14 @@
 #countdown {
   font-family:'Courier New';
   color: #ffffff;
-  justify-content: left;
-  font-size: 80px;
+  font-size: 350%;
   margin: 0;
   height: 5%;
   width: 15%;
 }
 
 .health {
-  margin-top: 15px;
+  margin-top: 1%;
   position: relative;
   width: 210px;
   height: 30px;
@@ -156,9 +152,7 @@
 
 #container{
   width:100%;
-  height: 170%;
-  margin-left: 6.5%;
-  margin-top: 3.5%;
+  height: 180%;
 }
 
 .nnavselezione{
@@ -166,11 +160,12 @@
   font-size:112%;
   color:#fff;
   text-align:center;
-  line-height:3;
+  font-weight: bold;
+  height:6%
 }
 
 .naveselezione{
-  width:17%;
+  width:19.7%;
   height: 43%;
   background: linear-gradient(#0b4476, #074365);
   float:left;
@@ -183,7 +178,7 @@
 
 .infos{
   width: 100%;
-  height: 40%;
+  height: 30%;
 }
 
 .imgselezione{
@@ -218,7 +213,6 @@
 .button{
   width:50%;
   height:10%;
-  margin-top: -13%;
   margin-left: 25%;
   text-align:center; 
   -moz-transition: all 0.4s ease-in-out;
