--- a/stile.css
+++ b/stile.css
@@ -147,6 +147,9 @@
   /*schermata 2 (gioco)*/
 
   .parametri {
+    text-align:center;
+    width:20%;
+    margin-right:1%;
     float: right;
   }
 
@@ -162,6 +165,7 @@
   /*desc (gioco)*/
 
   .health {
+    max-width:80%;
     margin-top: 1%;
     position: relative;
     width: 210px;
@@ -260,8 +264,17 @@
   margin-right: 1%;
   text-align: left;
 }
+
 .casella{
   display: block;
   width:100%;
   height:100%;
+}
+
+#campo{
+  min-height:20%;
+  max-height:100%;
+  width:48%;
+  height: 90%;
+  margin-left: 20%;
 }
