--- a/stile.css
+++ b/stile.css
@@ -99,25 +99,23 @@
 
   .infos{
     width: 100%;
-    height: 30%;
+    height: 40%;
   }
 
   .desc{
     font-size:100%;
     overflow:auto;
     width:100%;
-    height:130%;
+    height:100%;
     font-family:"Courier New";
     color: white;
     text-align:center;
-    margin-bottom: 10%;
   }
 
   .button{
     width:50%;
-    height:10%;
-    margin-left: 25%;
-    text-align:center; 
+    height:30%;
+    margin-left:25%;
     -moz-transition: all 0.4s ease-in-out;
     -o-transition: all 0.4s ease-in-out;
     -ms-transition: all 0.4s ease-in-out;
@@ -131,7 +129,6 @@
   .bott1{
     width:100%;
     height:100%;
-    margin-top:50%;
     border-color:transparent;
     border-radius:40px;
     font-size:128%;
@@ -147,28 +144,39 @@
   /*schermata 2 (gioco)*/
 
   .parametri {
-    text-align:center;
     width:20%;
     margin-right:1%;
     float: right;
+    border:1px solid black;
   }
 
   #countdown {
+    text-align:center;
     font-family:'Courier New';
     color: #ffffff;
     font-size: 350%;
+    height: 50%;
+    width: 100%;
     margin: 0;
-    height: 5%;
-    width: 15%;
+  }
+
+  #campo{
+    border:1px solid black;
+  }
+
+  #table1{
+    width:100%;
+    height:100%;
+    border:1px solid black;
+    border-collapse: collapse;
   }
 
   /*desc (gioco)*/
 
   .health {
-    max-width:80%;
     margin-top: 1%;
     position: relative;
-    width: 210px;
+    width: 100%;
     height: 30px;
     background: #b7c0b9;
     border-radius: 5px;
@@ -213,14 +221,6 @@
     text-align:center;
     font-weight: bold;
     color: white;
-  }
-
-  #table1{
-    width:50%;
-    height:50%;
-    margin-left: 20%;
-    border:1px solid black;
-    border-collapse: collapse;
   }
 
   .selez{
