--- a/stile.css
+++ b/stile.css
@@ -229,13 +229,15 @@
 
   /* schermata_2 */
 
-  /* titobarca */
-
-  /* table1 */
-
-  /* selez */
-
-  /* desc */
+    .regole{
+    font-size:200%;
+    overflow:auto;
+    width:100%;
+    height:100%;
+    font-family:"Courier New";
+    color: white;
+    text-align:justify;
+  }
 
 /* Generate */
 
