--- a/stile.css
+++ b/stile.css
@@ -103,11 +103,11 @@
     height: 40%;
   }
 
-  .desc{
+  .descn{
     font-size:100%;
+    height:100%;
     overflow:auto;
     width:100%;
-    height:100%;
     font-family:"Courier New";
     color: white;
     text-align:center;
@@ -172,7 +172,15 @@
     border-collapse: collapse;
   }
 
-  /*desc (gioco)*/
+   .desc{
+    font-size:100%;
+    overflow:auto;
+    width:100%;
+    height:100%;
+    font-family:"Courier New";
+    color: white;
+    text-align:center;
+  }
 
   .health {
     margin-top: 1%;
