--- a/stile.css
+++ b/stile.css
@@ -144,13 +144,6 @@
 
   /*schermata 2 (gioco)*/
 
-  .parametri {
-    width:20%;
-    margin-right:1%;
-    float: right;
-    border:1px solid black;
-  }
-
   #countdown {
     text-align:center;
     font-family:'Courier New';
@@ -181,6 +174,21 @@
     color: white;
     text-align:center;
   }
+  
+   #abilita{
+      text-align:center;
+      margin-top:10%;
+      width:100%;
+      height:100%;
+    }
+
+  .parametri {
+      width:20%;
+      margin-right:3%;
+      float: right;
+      border:1px solid black;
+      height:80%;
+    }
 
   .health {
     margin-top: 1%;
