--- a/stile.css
+++ b/stile.css
@@ -14,6 +14,9 @@
   cursor:pointer;
   color:#FFFFFF;
 }
+.bott:hover{
+  width:20%;
+}
 
 .schermata {
   width: 100%;
@@ -248,10 +251,12 @@
   font-size:200%;
   overflow:auto;
   width:100%;
-  height:100%;
+  height:60%;
   font-family:"Courier New";
   color: white;
   text-align:justify;
+  overflow: scroll;
+  border: 1px solid white;
 }
 
 /* Generate */
@@ -280,3 +285,4 @@ width:48%;
 height: 90%;
 margin-left: 20%;
 }
+
