--- a/stile.css
+++ b/stile.css
@@ -250,12 +250,12 @@
   .regole{
   font-size:200%;
   overflow:auto;
-  width:100%;
-  height:60%;
+  width:99%;
+  height:80%;
   font-family:"Courier New";
   color: white;
   text-align:justify;
-  overflow: scroll;
+  overflow-y: scroll;
   border: 1px solid white;
 }
 
@@ -285,4 +285,3 @@ width:48%;
 height: 90%;
 margin-left: 20%;
 }
-
