--- a/stile.css
+++ b/stile.css
@@ -188,7 +188,7 @@
     width:20%;
     margin-right:3%;
     float: right;
-    border:1px solid black;
+    border:1px solid rgb(255, 255, 255);
     height:80%;
   }
 
