--- a/stile.css
+++ b/stile.css
@@ -218,12 +218,14 @@
   color: #ffffff;
 }
 
-.conts{
+.para{
   border: solid 1px white;
+  margin-top: 5%;
+  margin-left: 17%;
   text-align: center;
   font-family:'Courier New';
   font-size:130%;
-  width:100%;
+  width:70%;
   color:#FFFFFF;
 }
 
