--- a/stile.css
+++ b/stile.css
@@ -240,10 +240,10 @@
 /* schermata_2 */
 
 .comandi {
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+  width: 93%;
+  height: 93%;
+  top: 6%;
+  left: 4%;
   position: fixed; 
 }
 
