--- a/mobile.css
+++ b/mobile.css
@@ -50,12 +50,50 @@
         .comandi {
           width: 100%;
           height: 60%;
-          margin-top: 40%;
-          
+          margin-top: 20%;
           left: 0;
-          
         }
 
+        .indietro{
+          width:30%;
+          height:25%;
+          margin-top:0;
+          margin-left:0;
+          font-size: 100%;
+          color: #ffffff;
+          background-color: #0606fb;
+        }
+        .indietro1{
+          width:30%;
+          height:5%;
+          margin-top:0;
+          margin-left:0;
+          font-size: 150%;
+          color: #ffffff;
+          background-color: #0606fb;
+        }
+        .regole{
+          font-size:100%;
+          overflow:auto;
+          width:90%;
+          height:80%;
+          font-family:"Courier New";
+          color: white;
+          text-align:justify;
+          overflow-y: scroll;
+        }
+      
+        .titoloregole{
+          font-family:'Courier New';
+          color:#ffffff;
+          font-size:400%;
+          font-weight:bold;
+          text-align:center;
+          text-transform:uppercase;
+          text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
+          
+        
+        }
       .titolo{
         font-family:'Courier New';
         color:#ffffff;
@@ -243,17 +281,7 @@
         margin-top: 0%;
       }
     
-      .regole{
-      font-size:100%;
-      overflow:auto;
-      width:90%;
-      height:80%;
-      margin-top: 0%;
-      font-family:"Courier New";
-      color: white;
-      text-align:justify;
-      overflow-y: scroll;
-    }
+   
 
     .casella{
       display: block;
