--- a/stile.css
+++ b/stile.css
@@ -277,9 +277,10 @@
   /* Fine*/
   
   .bott2{
-    width:5%;
+    border:1px solid black;
+    margin-left:40%;
+    width:20%;
     height:25%;
-    
     border-color:transparent;
     border-radius:40px;
     box-shadow:0px 0px 15px #4646fe;
@@ -297,7 +298,6 @@
     font-size: 250%;
     font-family:'Courier New';
     color:#FFFFFF;
-    border: 1px solid black;
   }
   
   .coppa{
@@ -305,7 +305,6 @@
     margin-top: 0;
     width: 100%;
     height: 100%;
-    border: 1px solid black;
     text-align: center;
   }
   
@@ -359,9 +358,4 @@
     font-size: 150%;
     color: #ffffff;
     background-color: #0606fb;
-  
-    
   }
-  
-  
-
