--- a/mobile.css
+++ b/mobile.css
@@ -314,10 +314,9 @@
     }
 
   .bott2{
-    width:18%;
+    width:50%;
     height:25%;
-    margin-top:30%;
-    margin-left: 40%;
+    margin-left: 28%;
     border-color:transparent;
     border-radius:40px;
     box-shadow:0px 0px 15px #4646fe;
@@ -329,10 +328,9 @@
   }
 
   .schermata_f{
-    width:18%;
+    text-align:center;
+    width:100%;
     height:25%;
-    margin-top:0%;
-    margin-left: 38%;
     font-size: 250%;
     font-family:'Courier New';
     color:#FFFFFF;
