--- a/stile.css
+++ b/stile.css
@@ -354,3 +354,13 @@
     cursor:pointer;
     background-color: #0606fb;
   }
+
+.titolof{
+    font-family:'Courier New';
+    color:#ffffff;
+    font-size:200%;
+    font-weight:bold;
+    text-align:center;
+    text-transform:uppercase;
+    text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
+  }
