--- a/stile.css
+++ b/stile.css
@@ -413,7 +413,7 @@ a:active {
   background-color: #15538a;
 }
 
-input {
+.casellelogin {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -424,7 +424,7 @@ input {
   outline: none;
 }
 
-input:focus {
+.casella:focus {
   border: 3px solid #555;
 }
 
@@ -478,4 +478,18 @@ td {
   text-transform: uppercase;
   text-shadow: 1px 2px 5px rgba(2, 2, 223, 0.897);
   margin-top: 2%;
+}
+.bottoneLogin {
+  width: 10%;
+  height: 6%;
+  margin-top: 2%;
+  margin-left: 2%;
+  border-color: transparent;
+  border-radius: 40px;
+  box-shadow: 0px 0px 15px #4646fe;
+  font-size: 120%;
+  font-family: "Courier New";
+  background-color: #0606fb;
+  cursor: pointer;
+  color: #ffffff;
 }
